# tibia-character-scanner

./: Cargo.toml
src/: tibia_data.rs
