[package]
name = "tibia-character-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
